"""
artists.py
----------
Implement the Artist class representing musicians and content creators.

Classes to implement:
  - Artist
"""
class Artist:
    def __init__(self, name, genre):
        self.name = name
        self.genre = genre